image position fixed

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam </p>
               <a href="">ნახეთ პროექტი <img src="img/Arrow 2 (1).png" alt=""></a>
             </div>
-            <img src="img/Card.png" class="container-fluid blabla">
+            <img src="img/Card.png" class="image-fluid blabla h-100">
           </div>
         </div>
 
