fixed second slide

--- a/index.html
+++ b/index.html
@@ -129,7 +129,14 @@
         </div>
 
         <div class="col-lg-4 absd">
-          <img src="img/Rectangle 1313.png" class="mb-5 bakk" style="width: 100%;">
+          <div class="gadasvla2">
+            <div class="texti3">
+                <h4>Workhub ოფისის Webflow დიზაინი</h4>
+                <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam </p>
+                <a href="">ნახეთ პროექტი <img src="img/Arrow 2 (1).png" alt=""></a>
+            </div>
+              <img src="img/Rectangle 1313.png" class="mb-5 bakk" style="width: 100%;">
+          </div>
           <img src="img/Card (1).png" class="" style="width: 100%;">
         </div>
       </div>
