--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- frequently -->
 
     <div class="container flexboxxi">
-      <div class=" col-lg-4">
+      <div class=" col-lg-4 nebo">
         <div class="firstpg">
           <h1>Ხშირად დასმული შეკითხვები</h1>
           <a href="">დაგვეკონტაქტეტ მეტისთვის</a>
@@ -256,10 +256,10 @@
       <div class="col-lg-8">
 
         <div class="accordion" id="accordionExample">
-          <div class="accordion-item">
+          <div class="accordion-item blck">
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                რამდენი დრო სჭირდება?
+                <span>01</span>რამდენი დრო სჭირდება?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -268,10 +268,10 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item blck">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
+                <span>02</span>როგორია თქვენი კლასის დასახელების კონვენცია?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -280,10 +280,10 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item blck">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                <span>03</span>როგორ ურთიერთობთ?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -292,10 +292,10 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item blck">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                <span>04</span>უფრო დიდი პროექტი მაქვს. Შეგიძლიათ გაუმკლავდეს მას?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -304,10 +304,10 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item blck">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                <span>05</span>როგორია თქვენი კლასის დასახელების კონვენცია?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
