--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/edit.css">
+    <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/alk-rounded-nusx-med/css/alk-rounded-nusx-med.min.css">
     
   </head>
   <body>
@@ -72,29 +73,29 @@
     <div class="bg2">
         <div class="container">
           <div class="row blackwnd">
-            <div class="col-lg-4">
+            <div class="col-lg-4 beber txtc">
               <h1>როგორ ვმუშაობთ</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-              <a href="">დაგვიკავშირდით<img src="img/Arrow 2.png" alt=""></a>
+              <a href="" class="bebee">დაგვიკავშირდით<img src="img/Arrow 2.png" alt=""></a>
             </div>
             <div class="col-lg-8">
               <div class="row whitewnd">
-                <div class="col-lg-6 pdngbtm">
+                <div class="col-lg-6 pdngbtm txtc">
                   <img src="img/1.png" alt="">
                   <h1>სტრატეგია</h1>
                   <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
                 </div>
-                <div class="col-lg-6 pdngbtm">
+                <div class="col-lg-6 pdngbtm txtc">
                   <img src="img/2.png" alt="">
                   <h1>Wireframing</h1>
                   <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 txtc">
                   <img src="img/3.png" alt="">
                   <h1>დიზაინი</h1>
                   <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 txtc">
                   <img src="img/4.png" alt="">
                   <h1>განვითარება</h1>
                   <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
@@ -111,7 +112,7 @@
     <div class="container">
       <div class="boxi">
         <h1>ნახეთ ჩვენი პროექტები</h1>
-        <a href="">იხილეთ მეტი <img src="img/Arrow 1 (1).png" alt=""></a>
+        <a href="" class="bege">იხილეთ მეტი <img src="img/Arrow 1 (1).png" alt=""></a>
       </div>
     </div>
     
@@ -255,9 +256,9 @@
 
       <div class="col-lg-8">
 
-        <div class="accordion" id="accordionExample">
+        <div class="accordion beeere" id="accordionExample">
           <div class="accordion-item blck">
-            <h2 class="accordion-header">
+            <h2 class="accordion-header sbm">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <span>01</span>რამდენი დრო სჭირდება?
               </button>
@@ -319,6 +320,24 @@
         </div>
 
       </div>
+    </div>
+
+    <!-- contact form -->
+
+    <div class="container aeeee">
+      <div class="row">
+        <div class="col-lg-6 backgr">
+          <div class="textebi">
+              <h1>Building stellar websites for early startups</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>            
+          </div>
+        </div>
+
+        <div class="col-lg-6 backgr2">
+          asdasd
+        </div>        
+      </div>
+
     </div>
 
 
