finished building stellar

--- a/index.html
+++ b/index.html
@@ -334,7 +334,19 @@
         </div>
 
         <div class="col-lg-6 backgr2">
-          asdasd
+          <div class="textebi2">
+            <h2>Send inquiry</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor incididunt ut labore.</p>
+          </div>
+          <div class="inpts">
+            <input type="text" name="" id="" value="Your name">
+            <input type="email" name="" id="" value="Email">
+            <input type="url" name="" id="" value="Paste your Figma design URL">
+          </div>
+          <div class="butoni">
+            <button>Send an Inquiry</button>
+            <a href="">Get in touch with us <img src="img/Arrow 1.png" alt=""></a>
+          </div>
         </div>        
       </div>
 
